[package]
name = "berthad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
bytes = "1.5.0"
hex = "0.4.3"
sha256 = "1.4.0"
threadpool = "1.8.1"
tokio = { version="1.33.0", features=["full"] }
uuid = { version = "1.4.1", features = ["v4"] }


[dev-dependencies]
tempdir = "0.3.7"
mockstream = "0.0.3"